--- a/client/package.json
+++ b/client/package.json
@@ -7,9 +7,11 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
-    "mapbox-gl": "^2.14.1",
+    "@types/mapbox-gl": "^2.7.19",
+    "mapbox-gl": "^2.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-map-gl": "^7.1.6",
     "react-router-dom": "^6.18.0",
     "react-scripts": "^4.0.3"
   },
