--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@types/mapbox-gl": "^2.7.19",
+    "axios": "^1.6.2",
     "mapbox-gl": "^2.15.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
